--- a/css/Product.css
+++ b/css/Product.css
@@ -20,29 +20,92 @@
 	--btnfont:arial;
 }
 
+.stars{
+	color:var(--i-color);
+}
+
+
+.i-cc, #footer-a i,.contact i{
+	color:var(--i-color);
+
+}
 
 /* header start */
+
+
+.heartbtn {
+    color: var(--purple);
+    font-size: .9rem;
+    cursor: pointer;
+}
+
 
 .burger{
 	display:none;
 }
 
-.span-9{
+.burger{
+	position: relative;
+	background:white;
+	width:2.1rem;
+	height:2.1rem;
+	text-align: center;
+	border-radius:50%;
+	box-shadow:0px 1px 1px 1px rgba(0,0,0,0.2);
+}
+.burger::before{
+	content: '';
+	position:absolute;
 	background-color:var(--mainbg-color);
+	width:1.8rem;
+	height:2px;
+	top:1rem;
+	left:.1rem;
+	transform: translateY(-5px);
+	transition:0.3s;
+}
+.burger::after{
+	content: '';
+	position:absolute;
+	width:1.8rem;
+	height:2px;
+	top:1rem;
+	left:.1rem;
+	background-color:var(--mainbg-color);
+	transform: translateY(5px);
+	transition:0.3s;
+}
+.burger.active::before{
+	transform: translateY(0px) rotate(45deg);
+}
+
+.burger.active::after{
+	transform: translateY(0px) rotate(-45deg);
+}
+
+
+
+.span-9{
+	background-color:var(--i-color);
 	border-radius:50%;
 	color:var(--purple);
 	padding:.2rem .4rem;
 	font-size: .9rem;
 }
 
-i{
-	color:var(--i-color); 
-}
+        
+        
+#iconrotate{
+        color:var(--i-color);
+		transform: rotate(178deg);
+      }
 
 .header{
+	position:relative;
+	z-index:100;
 	width:100%;
 	height:80px;
-	margin:auto;
+	margin:0% auto;
 	display:flex;
 	box-shadow:2px 2px 4px 2px rgba(0,0,0,0.3);
 	/* flex-wrap:wrap; */
@@ -53,7 +116,7 @@ i{
 
 .logo{
 	font-size:2rem;
-  font-family:var(--logofont);
+ font-family:var(--logofont);	
   flex-basis:200px;
 	font-weight:bolder;
 
@@ -65,22 +128,23 @@ i{
 	flex-wrap:wrap;
 }
 .ul1{
-	
 	grid-column-gap:5rem;
 	position:relative;
 }
 .ul2{
 position:absolute;
+display:none;
+background-color:white;
+width:100px;
+top:2rem;
 }
 .ul1 li{
    list-style:none;
 }
+
 .ul2 li{
+	padding:0 0 .1rem 0;
 	text-align:center;
-   display:none;
-}
-.ul1 li:hover .ul2 li{
-    display:block;
 }
 
 .ul2 li a:hover{
@@ -90,21 +154,14 @@ position:absolute;
 	padding:.1rem 0 .3rem 0;
 }
 
-.ul2 li{
-	padding:0 0 .1rem 0;
-	background-color:white;
-	width:100px;
-}
-
-
 .ul1>li:hover{
-	border-radius:3px;
+	border-radius:2px;
   outline:2px solid var(--purple);
 }
 
 .active-li{
-	border-radius:3px;
-	outline:2px solid var(--purple); 
+	border-radius:2px;
+	outline:2px solid var(--purple) 
 }
 .ul1>li{
 	transition:0.1s;
@@ -116,16 +173,15 @@ position:absolute;
 .ul1 li a{
 	font-size:1.2rem;
 	text-decoration:none;
-	color:black;
-    font-family:var(--ulfont); 
+	color:rgb(0, 0, 0);
+	 font-family:var(--ulfont); 
 }
 .login-a{
 	font-size:1.4rem;
 	text-decoration:none;
 	color:var(--mainbg-color);
 	font-weight:bolder;
-	font-family:Geometr415 Blk BT;
-  
+	
 }
 .login{
 	float:right;
@@ -136,12 +192,11 @@ position:absolute;
 
 .cart{
 	font-size:1.8rem;
-	float:right;
+	/*float:right;*/
 }
 .cart-logo{
 	color:var(--purple);
 }
-
 
 
 /* header end */
@@ -205,7 +260,6 @@ h5{
 	color:white;
 	text-decoration:none;
 	background-color:var(--btn2-color);
-	background-color:;
 	padding:.5rem .8rem;
 	font-size:1.3rem;
 	float:right;
@@ -289,9 +343,6 @@ footer{
 
 }
 
-.links{
-
-}
 h6{
 	font-size:1.1rem;
 	color:gray;
@@ -435,29 +486,33 @@ margin-bottom: .6rem;
 	}
 .header{
 	padding:0 1.2rem;
-	/* flex-direction:column; */
 	text-align:center;
 	justify-content:space-around;
 }
 .logo{
 	font-size:2.3rem;
 	position:relative;
-	/* right:1.3rem; */
 	flex-basis:130px;
 }
 .ul1{
 	flex-direction:column;
 	position:relative;
-    display:none;
- width:350px;
+     width:300px;
+}
+nav{ 
+	left:-110%;
+	position:absolute;
+	background-color:rgb(255, 255, 255);
+	box-shadow:1px 2px 2px 3px rgba(0,0,0,0.2);
+	top:5rem;
+    display:block;
+	transition:.4s linear;
 }
 
-nav{
-	left:-2%;
-	position:absolute;
-	background-color:var(--purple);
-	top:5rem;
+nav.active{
+	left:-4%;
 }
+
 .active-li{
 	outline: none;
 }
@@ -470,27 +525,32 @@ nav{
 .ul1 li a,.ul2 li a{
 	font-size:1.2rem;
 }
-.ul1 li a:hover{
-color:#fff;
-}
 
+.ul1 li a:hover{
+	color:var(--mainbg-color);
+	}
+	
 .ul1>li:hover{
   outline:none;
 }
 
 .ul2{
-	width:96%;
-}
-.ul2 li{
-	width:100%;
+	width:102%;
+	top:.4rem;
+	position: relative;
+	padding-top:1rem;
 	background-color:lightgray;
 }
-.ul2 li a:hover{
-	color:#fff;
-}
 
+.ul2 li{
+	margin-bottom:1rem;
+	}
+
+.ul2 li a:hover{
+	color:var(--mainbg-color);
+}
 .cart{
-	font-size:1.8rem;
+	font-size:1.9rem;
 	/* float:right; */
 }
 .burger{
@@ -501,9 +561,11 @@ color:#fff;
 }
 
 .login{
-	font-size:1.3rem;
 	position:relative;
-	right:.7rem;
+	right:.1rem;
+}
+.login a{
+	font-size:1.5rem;
 }
 
 }
@@ -574,15 +636,20 @@ justify-content:space-around;
 .ul1{
 	flex-direction:column;
 	position:relative;
-    display:none;
- width:300px;
+     width:300px;
+}
+nav{ 
+	left:-110%;
+	position:absolute;
+	background-color:rgb(255, 255, 255);
+	box-shadow:1px 2px 2px 3px rgba(0,0,0,0.2);
+	top:5rem;
+    display:block;
+	transition:.4s linear;
 }
 
-nav{
-	left:-2%;
-	position:absolute;
-	background-color:var(--purple);
-	top:5rem;
+nav.active{
+	left:-4%;
 }
 .active-li{
 	outline: none;
@@ -596,24 +663,31 @@ nav{
 .ul1 li a,.ul2 li a{
 	font-size:1.2rem;
 }
-.ul1 li a:hover{
-color:#fff;
-}
 
+.ul1 li a:hover{
+	color:var(--mainbg-color);
+	}
+	
 .ul1>li:hover{
   outline:none;
 }
 
 .ul2{
-	width:96%;
-}
-.ul2 li{
-	width:100%;
+	width:102%;
+	top:.4rem;
+	position: relative;
+	padding-top:1rem;
 	background-color:lightgray;
 }
+
+.ul2 li{
+	margin-bottom:1rem;
+	}
+
 .ul2 li a:hover{
-	color:#fff;
+	color:var(--mainbg-color);
 }
+
 .cart{
 	font-size:1.7rem;
 	
@@ -640,14 +714,13 @@ color:#fff;
 
     	.comman{
 		grid-row-gap:1rem;
-	margin: 1rem auto;
-
+		margin:1rem auto;
 	}
 
 
-  /*   .container2,.container3{
+    .container2,.container3{
 		grid-row-gap:1rem;
-	} */
+	}
 
 .bg1 img{
 	width:125px;
@@ -678,7 +751,7 @@ font-size:.8rem;
 	float:right;
 
 	padding:.2rem .5rem;
-	font-size:.9rem;
+	font-size:.8rem;
 }
 
 .span-3,.btn-a{
@@ -694,23 +767,27 @@ text-align:center;
 justify-content:space-around;
 }
 .logo{
-	font-size:1.9rem;
+	font-size:1.4rem;
 	position:relative;
-	/* right:1.3rem; */
 	flex-basis:130px;
 }
 .ul1{
 	flex-direction:column;
 	position:relative;
-    display:none;
- width:300px;
+     width:300px;
+}
+nav{ 
+	left:-110%;
+	position:absolute;
+	background-color:rgb(255, 255, 255);
+	box-shadow:1px 2px 2px 3px rgba(0,0,0,0.2);
+	top:5rem;
+    display:block;
+	transition:.4s linear;
 }
 
-nav{
-	left:-2%;
-	position:absolute;
-	background-color:var(--purple);
-	top:5rem;
+nav.active{
+	left:-4%;
 }
 .active-li{
 	outline: none;
@@ -725,28 +802,30 @@ nav{
 	font-size:1.2rem;
 }
 .ul1 li a:hover{
-color:#fff;
-}
-
+	color:var(--mainbg-color);
+	}
+	
 .ul1>li:hover{
   outline:none;
 }
 
 .ul2{
-	width:96%;
-}
-.ul2 li{
-	width:100%;
+	width:102%;
+	top:.4rem;
+	position: relative;
+	padding-top:1rem;
 	background-color:lightgray;
 }
+
+.ul2 li{
+	margin-bottom:1rem;
+	}
+
 .ul2 li a:hover{
-	color:#fff;
+	color:var(--mainbg-color);
 }
 .cart{
 	font-size:1.7rem;
-	
-
-	/* float:right; */
 }
 .burger{
 	position:relative;
@@ -776,5 +855,16 @@ color:#fff;
 
 }
 
+
 }
+
+
+
+
+
+
+
+
+
+
 
