--- a/css/cart.css
+++ b/css/cart.css
@@ -20,68 +20,132 @@
 }
 
 
-i{
+.stars{
 	color:var(--i-color);
+}
+
+
+.i-cc, #footer-a i,.contact i{
+	color:var(--i-color);
+
 }
 
 
 /* ************ header start  ************** */
 
 
+.heartbtn {
+    color: var(--purple);
+    font-size: .9rem;
+    cursor: pointer;
+}
+
 
 .burger{
 	display:none;
 }
-.span-9{
+
+.burger{
+	position: relative;
+	background:white;
+	width:2.1rem;
+	height:2.1rem;
+	text-align: center;
+	border-radius:50%;
+	box-shadow:0px 1px 1px 1px rgba(0,0,0,0.2);
+}
+.burger::before{
+	content: '';
+	position:absolute;
 	background-color:var(--mainbg-color);
+	width:1.8rem;
+	height:2px;
+	top:1rem;
+	left:.1rem;
+	transform: translateY(-5px);
+	transition:0.3s;
+}
+.burger::after{
+	content: '';
+	position:absolute;
+	width:1.8rem;
+	height:2px;
+	top:1rem;
+	left:.1rem;
+	background-color:var(--mainbg-color);
+	transform: translateY(5px);
+	transition:0.3s;
+}
+.burger.active::before{
+	transform: translateY(0px) rotate(45deg);
+}
+
+.burger.active::after{
+	transform: translateY(0px) rotate(-45deg);
+}
+
+
+
+.span-9{
+	background-color:var(--i-color);
 	border-radius:50%;
 	color:var(--purple);
 	padding:.2rem .4rem;
 	font-size: .9rem;
 }
 
+        
+        
+#iconrotate{
+        color:var(--i-color);
+		transform: rotate(178deg);
+      }
+
 .header{
 	position:relative;
-	 z-index:2; 
-    width:100%;
+	z-index:100;
+	width:100%;
 	height:80px;
 	margin:0% auto;
 	display:flex;
 	box-shadow:2px 2px 4px 2px rgba(0,0,0,0.3);
-	/*  flex-wrap:wrap;  */
+	/* flex-wrap:wrap; */
 	justify-content:space-between;
 	align-items:center;
 	padding:0% 1.7rem;
 }
 
 .logo{
-	font-weight:bolder;
-  font-size:2rem;
+	font-size:2rem;
  font-family:var(--logofont);	
   flex-basis:200px;
+	font-weight:bolder;
+
 }
+
 
 .ul1,.login{
 	display:flex;
 	flex-wrap:wrap;
 }
 .ul1{
-	
 	grid-column-gap:5rem;
 	position:relative;
 }
 .ul2{
 position:absolute;
+display:none;
+background-color:white;
+width:100px;
+top:2rem;
 }
 .ul1 li{
    list-style:none;
 }
+
 .ul2 li{
+	padding:0 0 .1rem 0;
 	text-align:center;
-   display:none;
-}
-.ul1 li:hover .ul2 li{
-    display:block;
 }
 
 .ul2 li a:hover{
@@ -91,20 +155,14 @@ position:absolute;
 	padding:.1rem 0 .3rem 0;
 }
 
-.ul2 li{
-	padding:0 0 .1rem 0;
-	background-color:white;
-	width:100px;
-}
-
 .ul1>li:hover{
-	border-radius:3px;
+	border-radius:2px;
   outline:2px solid var(--purple);
 }
 
 .active-li{
-	border-radius:3px;
-	outline:2px solid var(--purple); 
+	border-radius:2px;
+	outline:2px solid var(--purple) 
 }
 .ul1>li{
 	transition:0.1s;
@@ -114,18 +172,17 @@ position:absolute;
 	padding:.1rem 0 .1rem 0;
 }
 .ul1 li a{
-	 font-family:var(--ulfont); 
 	font-size:1.2rem;
 	text-decoration:none;
-	color:black;
-
+	color:rgb(0, 0, 0);
+	 font-family:var(--ulfont); 
 }
 .login-a{
-	font-weight:bolder;
 	font-size:1.4rem;
 	text-decoration:none;
 	color:var(--mainbg-color);
-	font-family:Geometr415 Blk BT;
+	font-weight:bolder;
+	
 }
 .login{
 	float:right;
@@ -136,12 +193,11 @@ position:absolute;
 
 .cart{
 	font-size:1.8rem;
-	float:right;
+	/*float:right;*/
 }
 .cart-logo{
 	color:var(--purple);
 }
-
 
 
 /* ************ header end ************** */
@@ -184,7 +240,7 @@ position:absolute;
 }
 
 .small-1:hover{
-  box-shadow:2px 2px 1px 1px rgba(0,0,0,0.1);
+  box-shadow:2px 1px 1px 1px rgba(0,0,0,0.1);
 }
 
 .big-img:hover{
@@ -592,16 +648,22 @@ margin-bottom: .6rem;
 .ul1{
 	flex-direction:column;
 	position:relative;
-    display:none;
- width:350px;
+     width:300px;
+}
+nav{ 
+	left:-110%;
+	position:absolute;
+	background-color:rgb(255, 255, 255);
+	box-shadow:1px 2px 2px 3px rgba(0,0,0,0.2);
+	top:5rem;
+    display:block;
+	transition:.4s linear;
 }
 
-nav{
-	left:-2%;
-	position:absolute;
-	background-color:var(--purple);
-	top:5rem;
+nav.active{
+	left:-4%;
 }
+
 .active-li{
 	outline: none;
 }
@@ -614,23 +676,29 @@ nav{
 .ul1 li a,.ul2 li a{
 	font-size:1.2rem;
 }
-.ul1 li a:hover{
-color:#fff;
-}
 
+.ul1 li a:hover{
+	color:var(--mainbg-color);
+	}
+	
 .ul1>li:hover{
   outline:none;
 }
 
 .ul2{
-	width:96%;
-}
-.ul2 li{
-	width:100%;
+	width:102%;
+	top:.4rem;
+	position: relative;
+	padding-top:1rem;
 	background-color:lightgray;
 }
+
+.ul2 li{
+	margin-bottom:1rem;
+	}
+
 .ul2 li a:hover{
-	color:#fff;
+	color:var(--mainbg-color);
 }
 .burger{
 	position:relative;
@@ -726,16 +794,22 @@ color:#fff;
 .ul1{
 	flex-direction:column;
 	position:relative;
-    display:none;
- width:300px;
+     width:300px;
+}
+nav{ 
+	left:-110%;
+	position:absolute;
+	background-color:rgb(255, 255, 255);
+	box-shadow:1px 2px 2px 3px rgba(0,0,0,0.2);
+	top:5rem;
+    display:block;
+	transition:.4s linear;
 }
 
-nav{
-	left:-2%;
-	position:absolute;
-	background-color:var(--purple);
-	top:5rem;
+nav.active{
+	left:-4%;
 }
+
 .active-li{
 	outline: none;
 }
@@ -748,25 +822,30 @@ nav{
 .ul1 li a,.ul2 li a{
 	font-size:1.2rem;
 }
-.ul1 li a:hover{
-color:#fff;
-}
 
+.ul1 li a:hover{
+	color:var(--mainbg-color);
+	}
+	
 .ul1>li:hover{
   outline:none;
 }
 
 .ul2{
-	width:96%;
-}
-.ul2 li{
-	width:100%;
+	width:102%;
+	top:.4rem;
+	position: relative;
+	padding-top:1rem;
 	background-color:lightgray;
 }
-.ul2 li a:hover{
-	color:#fff;
-}
 
+.ul2 li{
+	margin-bottom:1rem;
+	}
+
+.ul2 li a:hover{
+	color:var(--mainbg-color);
+}
 .cart{
 	font-size:1.8rem;
 	/* float:right; */
@@ -882,16 +961,22 @@ color:#fff;
 .ul1{
 	flex-direction:column;
 	position:relative;
-    display:none;
- width:300px;
+     width:300px;
+}
+nav{ 
+	left:-110%;
+	position:absolute;
+	background-color:rgb(255, 255, 255);
+	box-shadow:1px 2px 2px 3px rgba(0,0,0,0.2);
+	top:5rem;
+    display:block;
+	transition:.4s linear;
 }
 
-nav{
-	left:-2%;
-	position:absolute;
-	background-color:var(--purple);
-	top:5rem;
+nav.active{
+	left:-4%;
 }
+
 .active-li{
 	outline: none;
 }
@@ -904,23 +989,29 @@ nav{
 .ul1 li a,.ul2 li a{
 	font-size:1.2rem;
 }
-.ul1 li a:hover{
-color:#fff;
-}
 
+.ul1 li a:hover{
+	color:var(--mainbg-color);
+	}
+	
 .ul1>li:hover{
   outline:none;
 }
 
 .ul2{
-	width:96%;
-}
-.ul2 li{
-	width:100%;
+	width:102%;
+	top:.4rem;
+	position: relative;
+	padding-top:1rem;
 	background-color:lightgray;
 }
+
+.ul2 li{
+	margin-bottom:1rem;
+	}
+
 .ul2 li a:hover{
-	color:#fff;
+	color:var(--mainbg-color);
 }
 .cart{
 	position:relative;
@@ -1047,16 +1138,22 @@ top:-.4rem;
 .ul1{
 	flex-direction:column;
 	position:relative;
-    display:none;
- width:300px;
+     width:300px;
+}
+nav{ 
+	left:-110%;
+	position:absolute;
+	background-color:rgb(255, 255, 255);
+	box-shadow:1px 2px 2px 3px rgba(0,0,0,0.2);
+	top:5rem;
+    display:block;
+	transition:.4s linear;
 }
 
-nav{
-	left:-2%;
-	position:absolute;
-	background-color:var(--purple);
-	top:5rem;
+nav.active{
+	left:-4%;
 }
+
 .active-li{
 	outline: none;
 }
@@ -1069,23 +1166,29 @@ nav{
 .ul1 li a,.ul2 li a{
 	font-size:1.2rem;
 }
-.ul1 li a:hover{
-color:#fff;
-}
 
+.ul1 li a:hover{
+	color:var(--mainbg-color);
+	}
+	
 .ul1>li:hover{
   outline:none;
 }
 
 .ul2{
-	width:96%;
-}
-.ul2 li{
-	width:100%;
+	width:102%;
+	top:.4rem;
+	position: relative;
+	padding-top:1rem;
 	background-color:lightgray;
 }
+
+.ul2 li{
+	margin-bottom:1rem;
+	}
+
 .ul2 li a:hover{
-	color:#fff;
+	color:var(--mainbg-color);
 }
 .cart{
 	position:relative;
@@ -1202,6 +1305,5 @@ margin-right:28%;
 }
 
 }
-
 
 
