--- a/css/login.css
+++ b/css/login.css
@@ -164,16 +164,14 @@ position:absolute;
 	width:100%;
 	height:100vh;
 	font-family:sans-serif;
-	background-color:var(--mainbg-color);
+	background-color:rgba(0,0,0,0.9);
 }
 .card{
-	margin-top:3rem;
+	margin-top:1rem;
 	width:345px;
-	height:496px;
+	height:560px;
 	box-shadow:2px 2px 4px 3px rgba(0,0,0,0.3);
 }
-
-
 
 .box{
 	position:relative;
@@ -181,25 +179,31 @@ position:absolute;
 	height:100%;
 	transform-style:preserve-3d;
     transition:transform 1s;
-     transform:perspective(700px); 
+     /* transform:perspective(700px);  */
 	
 }
 
- .box:hover{
-	transform: rotateY(180deg);
+/*  .box:hover{
+	transform:rotateY(180deg);
+}  */
 
-} 
 .front-card, .back-card{
 	position:absolute;
 	width:100%;
 	height:100%;
 	padding:55px;
 	backface-visibility:hidden;
-	background-color:var(--purple);
+	background-color:brown;
 }
 .back-card{
 	transform:rotateY(180deg);
 }
+
+.back-card .forgot{
+	position:relative;
+	top:-.4rem;
+}
+
 
 .card h2{
 	font-size: 1.5rem;
@@ -208,23 +212,67 @@ position:absolute;
 }
 
 .input-box{
+	border-radius:3px;
+	border:none;
 	text-align:center;
-	width:95%;
-	outline: none;
-	height:2.3rem;
+	width:120%;
+	/* outline: none; */
+	border-radius:4px;
+    outline:2px solid rgba(0,0,0,0.1);
+	height:2.7rem;
 	padding: 0 10px;
-	margin: .3rem 0;
+	margin-bottom:2rem;
+	margin-top:-1rem;
+	margin-left:-1.5rem;
 }
+
+.front-card .input-box{
+	border-radius:3px;
+	border:none;
+	text-align:center;
+	width:120%;
+	/* outline: none; */
+	border-radius:4px;
+    outline:3px solid rgba(0,0,0,0.1);
+	height:2.7rem;
+	padding: 0 10px;
+	margin-bottom:2rem;
+	margin-top:.6rem;
+	margin-left:-1.5rem;
+
+}
+
+
 ::placeholder{
     font-size:.8rem;
 }
+.submit-btn{
+	margin-top:-1rem;
+}
 
 button{
-	width: 95%;
-	margin:2.3rem 0 10px;
+	border-radius:3px;
+	width: 120%;
+	margin:.2rem 0 10px;
 	height:2.3rem;
-	font-size:.8rem; 
+	font-size:.8rem;
+	border:none;
+	margin-left:-1.5rem;
+
 }
+
+.front-card button{
+	border-radius:3px;
+	width:120%;
+	margin:.9rem 0 10px;
+	height:2.3rem;
+	font-size:.8rem;
+	border:none;
+	margin-left:-1.5rem;
+
+}
+
+
 span{
 	font-size:.8rem;
 	margin-left:.7rem;
@@ -239,18 +287,25 @@ span{
 	margin-top: 1.3rem;
 }
 
+p{
+	opacity:0;
+	visibility:hidden;
+	margin-top:-1.4rem;
+}
 
-
+.front-card p{
+	margin-top:-1.8rem;
+}
 
 .logo-2 img{
-	width:120px;
-	height:120px;
+	width:110px;
+	height:110px;
 	border:4px solid white;
 	border-radius:50%;
 	/* position:absolute; */
 }
 .logo-2{
-	margin-top:-6.5rem;
+	margin-top:-7rem;
 	margin-left:3.5rem;
 }
 .logo-2 img:hover{
@@ -259,15 +314,15 @@ span{
 }
 
 .logo-3 img{
-	width:123px;
-	height:123px;
+	width:110px;
+	height:110px;
 	border:4px solid white;
 	border-radius:50%;
 }
 
 .logo-3{
 	margin-top:-7rem;
-	margin-left:3.8rem;
+	margin-left:4.3rem;
 }
 .logo-3 img:hover{
 	animation:shake 0.1s;
@@ -275,14 +330,14 @@ span{
 }
 
 
-@keyframes shake{
+/* @keyframes shake{
 	0%{
 		transform: translate(8px,8px);
 	}
 	100%{
 		transform:translate(-8px,8px);
 	}
-}
+} */
 
 /* ************ login end ************** */
 
@@ -388,32 +443,60 @@ color:#fff;
 
 
 .card{
-	margin-top:3rem;
-	width:260px;
-	height:460px;
+	margin-top:1rem;
+	width:300px;
+	height:550px;
 	box-shadow:2px 2px 4px 3px rgba(0,0,0,0.3);
 	perspective:1000px;
 	/* background-color:#993666; */
 }
 
-.input-box{
+
+/* button{
+	margin-left:-.3rem;
+	margin:.9rem 0 10px;
+
+} */
+
+.back-card button ,.front-card button{
+	position:relative;
+	/* left:-1.4rem; */
 	width:130%;
-	margin-left:-1.4rem;
+    /* margin:.9rem 0 10px; */
 }
 
-button{
-	margin-left:-.3rem;
-	width:110%;
+
+.logo-2 img{
+	width:100px;
+	height:100px;
+	border:4px solid white;
+	border-radius:50%;
+	/* position:absolute; */
 }
 
 .logo-3 img{
-   margin-top:-2rem;
-   margin-left:-2.9rem;
+	width:100px;
+	height:100px;
+	border:4px solid white;
+	border-radius:50%;
+	/* position:absolute; */
 }
 
-.logo-2 img{
-	margin-top:-2rem;
-	margin-left:-2.4rem;
+.logo-2{
+	margin-top:-7rem;
+	margin-left:3rem;
+}
+
+.logo-3{
+	margin-top:-7rem;
+	margin-left:2.7rem;
+}
+
+.front-card .input-box,.back-card .input-box{
+	width:130%;
+	height:2.5rem;
+	margin-left:-1.5rem;
+/* 	margin-top:.6rem; */
 }
 
 }
@@ -495,34 +578,58 @@ color:#fff;
 }
 
 
-
 .card{
-	margin-top:3rem;
+	margin-top:3.3rem;
 	width:260px;
-	height:460px;
+	height:550px;
 	box-shadow:2px 2px 4px 3px rgba(0,0,0,0.3);
 	perspective:1000px;
 	/* background-color:#993666; */
 }
 
-.input-box{
-	width:130%;
-	margin-left:-1.4rem;
+.front-card .input-box,.back-card .input-box{
+	width:140%;
+	height:2.5rem;
+	margin-left:-1.9rem;
+/* 	margin-top:.6rem; */
 }
 
-button{
-	margin-left:-.3rem;
-	width:110%;
+.back-card button ,.front-card button{
+	position:relative;
+	left:-.3rem;
+	width:140%;
+}
+
+/* .front-card button{
+	margin-left:-0rem;
+	width:120%;
+	margin:.9rem 0 10px;
+} */
+
+.logo-2 img{
+	width:100px;
+	height:100px;
+	border:4px solid white;
+	border-radius:50%;
+	/* position:absolute; */
 }
 
 .logo-3 img{
-   margin-top:-2rem;
-   margin-left:-2.9rem;
+	width:100px;
+	height:100px;
+	border:4px solid white;
+	border-radius:50%;
+	/* position:absolute; */
 }
 
-.logo-2 img{
-	margin-top:-2rem;
-	margin-left:-2.4rem;
+.logo-2{
+	margin-top:-7rem;
+	margin-left:1.8rem;
+}
+
+.logo-3{
+	margin-top:-7rem;
+	margin-left:1.3rem;
 }
 
 }
