--- a/css/style.css
+++ b/css/style.css
@@ -1297,7 +1297,7 @@ h6 {
 
 
 
-@media screen and (max-width:565px) and (min-width:400px) {
+@media screen and (max-width:565px) and (min-width:457px) {
 
 .heartbtn{
     margin-left:-2rem;
@@ -1664,7 +1664,7 @@ h6 {
 
 
 
-@media screen and (max-width:399px) and (min-width:320px) {
+@media screen and (max-width:399px) and (min-width:375px) {
 
 
 .whishlist {
@@ -1674,15 +1674,16 @@ h6 {
 
 .heart{
     position: relative;
-    left:-3rem;
+    left:-.4rem;
     top:1rem;
-    font-size:1rem;
+    font-size:.8rem;
+    width:36px;
 }
 
 .main-img{
     position: relative;
     margin: auto;
-    width:60%;
+    width:47%;
     min-height:40vh;
 }
 .main-img img{
@@ -1693,15 +1694,15 @@ h6 {
 #leftarrow {
  position:relative;
     margin-left:-99%;
-    top:110px;
+    top:140px;
     font-size:2.4rem;    
 }
 
 #rightarrow {
     font-size:2.4rem;    
- position:relative;
+    position:relative;
     margin-left:99%;
-    top:-200px;
+    top:-166px;
 }
 
 .img img{
@@ -1878,3 +1879,221 @@ h6 {
         top: -6rem;
     }
 }
+
+
+@media screen and (max-width:399px) and (min-width:320px) {
+
+
+.whishlist {
+    left:20%;
+}
+
+
+.heart{
+    position: relative;
+    left:-.4rem;
+    top:1rem;
+    font-size:.8rem;
+    width:36px;
+}
+
+.main-img{
+    position: relative;
+    margin: auto;
+    width:65%;
+    min-height:40vh;
+}
+.main-img img{
+    height:250px;
+    width:280px;
+}
+
+#leftarrow {
+ position:relative;
+    margin-left:-99%;
+    top:140px;
+    font-size:2.4rem;    
+}
+
+#rightarrow {
+    font-size:2.4rem;    
+    position:relative;
+    margin-left:99%;
+    top:-166px;
+}
+
+.img img{
+    margin-left:-4rem;
+    width:240px;
+    height:200px;
+}
+
+
+
+
+    .header {
+        padding: 0% .1rem;
+        /* flex-direction:column; */
+        text-align: center;
+        justify-content: space-around;
+    }
+    .logo {
+        font-size: 1.9rem;
+        position: relative;
+        left: .3rem;
+        flex-basis: 130px;
+    }
+    .ul1 {
+        flex-direction: column;
+        position: relative;
+        width: 300px;
+    }
+    nav {
+        position: absolute;
+        background-color: var(--purple);
+        top: 5rem;
+    }
+    nav {
+        left: -110%;
+        position: absolute;
+        background-color: white;
+        box-shadow: 1px 2px 2px 3px rgba(0, 0, 0, 0.2);
+        top: 5rem;
+        display: block;
+        transition: .4s linear;
+    }
+    nav.active {
+        left: -4%;
+    }
+    .active-li {
+        outline: none;
+    }
+    .ul1>li {
+        margin: .9rem 0;
+    }
+    .ul1 li a,
+    .ul2 li a {
+        font-size: 1.2rem;
+    }
+    .ul1 li a:hover {
+        color: var(--mainbg-color);
+    }
+    .ul1>li:hover {
+        outline: none;
+    }
+    .ul2 {
+        width: 102%;
+        top: .4rem;
+        position: relative;
+        padding-top: 1rem;
+        background-color: lightgray;
+    }
+    .ul2 li {
+        margin-bottom: 1rem;
+    }
+    .ul2 li a:hover {
+        color: var(--mainbg-color);
+    }
+    .cart {
+        font-size: 1.7rem;
+    }
+    .burger {
+        position: relative;
+        display: block;
+        cursor: pointer;
+    }
+    .login {
+        font-size: 1.3rem;
+        position: relative;
+        /* left:.4rem; */
+    }
+    .colum {
+        flex-direction: column;
+        text-align: center;
+        padding: 3.6rem 0 0 0;
+    }
+    .main-img img {
+        height: 240px;
+    }
+    .main-img {
+        padding: 2.5rem 0 0 0;
+    }
+    .intro-txt {
+        padding: 1.3rem 0 0 0;
+    }
+    .span-1 {
+        font-size: 3.5rem;
+    }
+    .btn {
+        padding: 1.6rem 0 0 0;
+    }
+    .container1 {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        grid-row-gap: 1rem;
+        grid-column-gap: .8rem;
+    }
+    .container2 {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        grid-column-gap: 1.1rem;
+        grid-row-gap: 2rem;
+        margin: 5rem auto;
+    }
+    .bg2 img {
+        width: 120px;
+        height: 125px;
+    }
+    .span-1 {
+        font-size: 2.1rem;
+    }
+    .container4 {
+        grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+        grid-column-gap: 2rem;
+        /*margin:5rem auto;*/
+    }
+    .bg4 img {
+        width: 130px;
+        height: 130px;
+    }
+    .bg4 {
+        padding: .5rem .5rem 1.5rem .5rem;
+    }
+    h5 {
+        top: .7rem;
+    }
+    .btn-a {
+        font-size: .8rem;
+        padding: .4rem .6rem;
+        margin-right: -41%;
+        font-family: arial;
+    }
+    .span-3 {
+        width: 37%;
+        margin-top: -1%;
+        padding: .3rem .3rem;
+        font-size: .8rem;
+    }
+    .stars {
+        font-size: .5rem;
+        margin-right: 28%;
+    }
+    .container6 {
+        grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+        grid-row-gap: 3rem;
+    }
+    .bg6 img {
+        width: 130px;
+        height: 35px;
+    }
+    .txt {
+        top: 1.3rem;
+    }
+    .footer-txt {
+        padding: 3rem 0 0 0;
+        grid-row-gap: 2rem;
+    }
+    .fas-con {
+        position: relative;
+        top: -6rem;
+    }
+}
+
